Cmake: allow hardware debug
Do not strip binaries and set g flag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -371,7 +371,9 @@ set(CPACK_PACKAGE_NAME ${PROJECT_SHORT_NAME})
 set(CPACK_PACKAGE_VENDOR ${PROJECT_VENDOR})
 set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
 set(CPACK_PACKAGE_CONTACT ${PROJECT_CONTACT})
-set(CPACK_STRIP_FILES "bin/dune")
+if(NOT CMAKE_BUILD_TYPE MATCHES "Debug")
+  set(CPACK_STRIP_FILES "bin/dune")
+endif(CMAKE_BUILD_TYPE MATCHES "Debug")
 set(CPACK_PACKAGE_EXECUTABLES ${DUNE_EXTRA_EXE_NAMES})
 set(CPACK_PACKAGE_FILE_NAME
   "dune-${CPACK_PACKAGE_VERSION}-${DUNE_SYSTEM_NAME_VAR}")
